--- a/app/themes/flexbones/style.css
+++ b/app/themes/flexbones/style.css
@@ -1,25 +1,84 @@
 /*!
-Theme Name:     Flexbones
-Theme URI:      http://github.com/guccipizza/flexbones
-Description:    A responsive wordpress starter theme
+Theme Name:     Flex
+Theme URI:      http://github.com/guccipizza/flexbones-modification
+Description:    This is a modified Flexbones theme, branched from Roikles' Flexbones. It was sending notifications for every change I made so I made a fresh REPO with no additional contributors.
 Author:         Olly Pittaway
 Author URI:     https://ollypittaway.co.uk
-Version:        3.0.0
-License:        All work is the property of Olly Pittaway
+Version:        1.0.0
+License:        MIT
 License URI:    n/a
 */
-/*!
-    ________          __                         
-   / ____/ /__  _  __/ /_  ____  ____  ___  _____
-  / /_  / / _ \| |/_/ __ \/ __ \/ __ \/ _ \/ ___/
- / __/ / /  __/>  </ /_/ / /_/ / / / /  __(__  ) 
-/_/   /_/\___/_/|_/_.___/\____/_/ /_/\___/____/  
-                                                 
+/*
+  Name: Flexi Grid with use of CSS Variables
+  Author: Olly Pittaway
+  License: All content is property of Olly Pittaway.
  */
+.g {
+  --gi-gutter: -10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-left: var(--gi-gutter);
+}
+
+.g .gi {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-left: calc(var(--gi-gutter) * -1);
+  margin-bottom: calc(var(--gi-gutter) * -1);
+  --span-s: 1/1;
+  --calc-s: calc(calc(var(--span-s))*100%);
+  --span: var(--span-s);
+  --calc-m: calc(calc(var(--span))*100%);
+  --span-l: var(--span);
+  --calc-l: calc(calc(var(--span-l))*100%);
+  -ms-flex-preferred-size: var(--calc-s);
+  flex-basis: var(--calc-s);
+  /*
+      This is used if you do not have at-breakpoint included
+    
+      @media (min-width: 800px){
+        -ms-flex-preferred-size: var(--calc-m);
+        flex-basis: var(--calc-m); //when mid use the mid percentage
+      }
+      @media (min-width: 1200px){
+        -ms-flex-preferred-size: var(--calc-l);
+        flex-basis: var(--calc-l); //when large use the large percentage
+      }
+    */
+}
+
+@media (min-width: 800px) {
+  .g .gi {
+    -ms-flex-preferred-size: var(--calc-m);
+    flex-basis: var(--calc-m);
+  }
+}
+
+@media (min-width: 1000px) {
+  .g .gi {
+    -ms-flex-preferred-size: var(--calc-l);
+    flex-basis: var(--calc-l);
+  }
+}
+
+.g .gi > * {
+  width: 100%;
+}
+
 * {
   margin: 0;
   padding: 0;
-  position: relative;
   box-sizing: border-box;
 }
 
@@ -78,534 +137,6 @@ body {
 @media (min-width: 1000px) {
   .wrapper--small {
     max-width: 1200px;
-  }
-}
-
-body:after {
-  box-sizing: border-box;
-  position: fixed;
-  display: block;
-  bottom: 10px;
-  right: 10px;
-  padding: 5px 28px 5px 20px;
-  font-size: 12px;
-  color: #777;
-  border-radius: 3px;
-  background-color: #f7f7f7;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
-  z-index: 100000;
-}
-
-.grid {
-  box-sizing: border-box;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: -2.4rem;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 auto;
-          flex: 0 1 auto;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.grid > * {
-  box-sizing: border-box;
-  padding-left: 2.4rem;
-  position: relative;
-}
-
-.grid--no-gutter {
-  margin-left: 0;
-}
-
-.grid--no-gutter > * {
-  padding-left: 0;
-}
-
-.grid--v-top {
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-              -ms-grid-row-align: flex-start;
-          align-items: flex-start;
-}
-
-.grid--v-center {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-              -ms-grid-row-align: center;
-          align-items: center;
-}
-
-.grid--v-bottom {
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-              -ms-grid-row-align: flex-end;
-          align-items: flex-end;
-}
-
-.grid--v-stretch {
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-              -ms-grid-row-align: stretch;
-          align-items: stretch;
-}
-
-.grid--v-baseline {
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-              -ms-grid-row-align: stretch;
-          align-items: stretch;
-}
-
-.grid--align-start {
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-}
-
-.grid--align-end {
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
-.grid--align-center {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.grid--align-space-between {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.grid--align-space-around {
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-.span--fit {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0;
-          flex: 1 0;
-}
-
-.span--flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.span--1-12 {
-  -ms-flex-preferred-size: 8.33333%;
-      flex-basis: 8.33333%;
-  max-width: 8.33333%;
-}
-
-.span--1-6, .span--2-12 {
-  -ms-flex-preferred-size: 16.66667%;
-      flex-basis: 16.66667%;
-  max-width: 16.66667%;
-}
-
-.span--1-4, .span--3-12 {
-  -ms-flex-preferred-size: 25%;
-      flex-basis: 25%;
-  max-width: 25%;
-}
-
-.span--1-3, .span--2-6, .span--4-12 {
-  -ms-flex-preferred-size: 33.33333%;
-      flex-basis: 33.33333%;
-  max-width: 33.33333%;
-}
-
-.span--5-12 {
-  -ms-flex-preferred-size: 41.66667%;
-      flex-basis: 41.66667%;
-  max-width: 41.66667%;
-}
-
-.span--1-2, .span--2-4, .span--3-6, .span--6-12 {
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-  max-width: 50%;
-}
-
-.span--7-12 {
-  -ms-flex-preferred-size: 58.33333%;
-      flex-basis: 58.33333%;
-  max-width: 58.33333%;
-}
-
-.span--2-3, .span--4-6, .span--8-12 {
-  -ms-flex-preferred-size: 66.66667%;
-      flex-basis: 66.66667%;
-  max-width: 66.66667%;
-}
-
-.span--3-4, .span--9-12 {
-  -ms-flex-preferred-size: 75%;
-      flex-basis: 75%;
-  max-width: 75%;
-}
-
-.span--5-6, .span--10-12 {
-  -ms-flex-preferred-size: 83.33333%;
-      flex-basis: 83.33333%;
-  max-width: 83.33333%;
-}
-
-.span--11-12 {
-  -ms-flex-preferred-size: 91.66667%;
-      flex-basis: 91.66667%;
-  max-width: 91.66667%;
-}
-
-.span--1-1, .span--2-2, .span--3-3, .span--4-4, .span--6-6, .span--12-12 {
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
-  max-width: 100%;
-}
-
-.span--omega {
-  margin-left: auto;
-}
-
-body:after {
-  content: "Small";
-  background: -webkit-linear-gradient(left, #f7f7f7, #f7f7f7 90%, #DABB3A 90%, #DABB3A 100%);
-  background: linear-gradient(to right, #f7f7f7, #f7f7f7 90%, #DABB3A 90%, #DABB3A 100%);
-}
-
-@media (min-width: 800px) {
-  .grid {
-    box-sizing: border-box;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-left: -2.4rem;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 auto;
-            flex: 0 1 auto;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  .grid > * {
-    box-sizing: border-box;
-    padding-left: 2.4rem;
-    position: relative;
-  }
-  .grid--no-gutter--m {
-    margin-left: 0;
-  }
-  .grid--no-gutter--m > * {
-    padding-left: 0;
-  }
-  .grid--v-top--m {
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-                -ms-grid-row-align: flex-start;
-            align-items: flex-start;
-  }
-  .grid--v-center--m {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-                -ms-grid-row-align: center;
-            align-items: center;
-  }
-  .grid--v-bottom--m {
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-                -ms-grid-row-align: flex-end;
-            align-items: flex-end;
-  }
-  .grid--v-stretch--m {
-    -webkit-box-align: stretch;
-        -ms-flex-align: stretch;
-                -ms-grid-row-align: stretch;
-            align-items: stretch;
-  }
-  .grid--v-baseline--m {
-    -webkit-box-align: stretch;
-        -ms-flex-align: stretch;
-                -ms-grid-row-align: stretch;
-            align-items: stretch;
-  }
-  .grid--align-start--m {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-  }
-  .grid--align-end--m {
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-  }
-  .grid--align-center--m {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .grid--align-space-between--m {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-  .grid--align-space-around--m {
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-  }
-  .span--fit--m {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 0;
-            flex: 1 0;
-  }
-  .span--flex--m {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  .span--1-12--m {
-    -ms-flex-preferred-size: 8.33333%;
-        flex-basis: 8.33333%;
-    max-width: 8.33333%;
-  }
-  .span--1-6--m, .span--2-12--m {
-    -ms-flex-preferred-size: 16.66667%;
-        flex-basis: 16.66667%;
-    max-width: 16.66667%;
-  }
-  .span--1-4--m, .span--3-12--m {
-    -ms-flex-preferred-size: 25%;
-        flex-basis: 25%;
-    max-width: 25%;
-  }
-  .span--1-3--m, .span--2-6--m, .span--4-12--m {
-    -ms-flex-preferred-size: 33.33333%;
-        flex-basis: 33.33333%;
-    max-width: 33.33333%;
-  }
-  .span--5-12--m {
-    -ms-flex-preferred-size: 41.66667%;
-        flex-basis: 41.66667%;
-    max-width: 41.66667%;
-  }
-  .span--1-2--m, .span--2-4--m, .span--3-6--m, .span--6-12--m {
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
-    max-width: 50%;
-  }
-  .span--7-12--m {
-    -ms-flex-preferred-size: 58.33333%;
-        flex-basis: 58.33333%;
-    max-width: 58.33333%;
-  }
-  .span--2-3--m, .span--4-6--m, .span--8-12--m {
-    -ms-flex-preferred-size: 66.66667%;
-        flex-basis: 66.66667%;
-    max-width: 66.66667%;
-  }
-  .span--3-4--m, .span--9-12--m {
-    -ms-flex-preferred-size: 75%;
-        flex-basis: 75%;
-    max-width: 75%;
-  }
-  .span--5-6--m, .span--10-12--m {
-    -ms-flex-preferred-size: 83.33333%;
-        flex-basis: 83.33333%;
-    max-width: 83.33333%;
-  }
-  .span--11-12--m {
-    -ms-flex-preferred-size: 91.66667%;
-        flex-basis: 91.66667%;
-    max-width: 91.66667%;
-  }
-  .span--1-1--m, .span--2-2--m, .span--3-3--m, .span--4-4--m, .span--6-6--m, .span--12-12--m {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
-    max-width: 100%;
-  }
-  .span--omega--m {
-    margin-left: auto;
-  }
-  body:after {
-    content: "Medium";
-    background: -webkit-linear-gradient(left, #f7f7f7, #f7f7f7 90%, #1EA061 90%, #1EA061 100%);
-    background: linear-gradient(to right, #f7f7f7, #f7f7f7 90%, #1EA061 90%, #1EA061 100%);
-  }
-}
-
-@media (min-width: 1100px) {
-  .grid {
-    box-sizing: border-box;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-left: -2.4rem;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 auto;
-            flex: 0 1 auto;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  .grid > * {
-    box-sizing: border-box;
-    padding-left: 2.4rem;
-    position: relative;
-  }
-  .grid--no-gutter--l {
-    margin-left: 0;
-  }
-  .grid--no-gutter--l > * {
-    padding-left: 0;
-  }
-  .grid--v-top--l {
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-                -ms-grid-row-align: flex-start;
-            align-items: flex-start;
-  }
-  .grid--v-center--l {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-                -ms-grid-row-align: center;
-            align-items: center;
-  }
-  .grid--v-bottom--l {
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-                -ms-grid-row-align: flex-end;
-            align-items: flex-end;
-  }
-  .grid--v-stretch--l {
-    -webkit-box-align: stretch;
-        -ms-flex-align: stretch;
-                -ms-grid-row-align: stretch;
-            align-items: stretch;
-  }
-  .grid--v-baseline--l {
-    -webkit-box-align: stretch;
-        -ms-flex-align: stretch;
-                -ms-grid-row-align: stretch;
-            align-items: stretch;
-  }
-  .grid--align-start--l {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-  }
-  .grid--align-end--l {
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-  }
-  .grid--align-center--l {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .grid--align-space-between--l {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-  .grid--align-space-around--l {
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-  }
-  .span--fit--l {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 0;
-            flex: 1 0;
-  }
-  .span--flex--l {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  .span--1-12--l {
-    -ms-flex-preferred-size: 8.33333%;
-        flex-basis: 8.33333%;
-    max-width: 8.33333%;
-  }
-  .span--1-6--l, .span--2-12--l {
-    -ms-flex-preferred-size: 16.66667%;
-        flex-basis: 16.66667%;
-    max-width: 16.66667%;
-  }
-  .span--1-4--l, .span--3-12--l {
-    -ms-flex-preferred-size: 25%;
-        flex-basis: 25%;
-    max-width: 25%;
-  }
-  .span--1-3--l, .span--2-6--l, .span--4-12--l {
-    -ms-flex-preferred-size: 33.33333%;
-        flex-basis: 33.33333%;
-    max-width: 33.33333%;
-  }
-  .span--5-12--l {
-    -ms-flex-preferred-size: 41.66667%;
-        flex-basis: 41.66667%;
-    max-width: 41.66667%;
-  }
-  .span--1-2--l, .span--2-4--l, .span--3-6--l, .span--6-12--l {
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
-    max-width: 50%;
-  }
-  .span--7-12--l {
-    -ms-flex-preferred-size: 58.33333%;
-        flex-basis: 58.33333%;
-    max-width: 58.33333%;
-  }
-  .span--2-3--l, .span--4-6--l, .span--8-12--l {
-    -ms-flex-preferred-size: 66.66667%;
-        flex-basis: 66.66667%;
-    max-width: 66.66667%;
-  }
-  .span--3-4--l, .span--9-12--l {
-    -ms-flex-preferred-size: 75%;
-        flex-basis: 75%;
-    max-width: 75%;
-  }
-  .span--5-6--l, .span--10-12--l {
-    -ms-flex-preferred-size: 83.33333%;
-        flex-basis: 83.33333%;
-    max-width: 83.33333%;
-  }
-  .span--11-12--l {
-    -ms-flex-preferred-size: 91.66667%;
-        flex-basis: 91.66667%;
-    max-width: 91.66667%;
-  }
-  .span--1-1--l, .span--2-2--l, .span--3-3--l, .span--4-4--l, .span--6-6--l, .span--12-12--l {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
-    max-width: 100%;
-  }
-  .span--omega--l {
-    margin-left: auto;
-  }
-  body:after {
-    content: "Large";
-    background: -webkit-linear-gradient(left, #f7f7f7, #f7f7f7 90%, #13a2f7 90%, #13a2f7 100%);
-    background: linear-gradient(to right, #f7f7f7, #f7f7f7 90%, #13a2f7 90%, #13a2f7 100%);
   }
 }
 
