--- a/app/themes/flexbones/assets/sass/tools/_flexi-grid.scss
+++ b/app/themes/flexbones/assets/sass/tools/_flexi-grid.scss
@@ -17,7 +17,7 @@
   flex-wrap: wrap;
   
   -webkit-box-pack: justify; -ms-flex-pack: justify;
-  justify-content: space-between; 
+  justify-content: flex-start; 
   
   margin-left: var(--gi-gutter);
   
