Ignore the scripts.min.js file to avoid constant file updating. + Actually add the scripts.min.js file + make grid items block.

--- a/app/themes/flexbones/assets/sass/tools/_flexi-grid.scss
+++ b/app/themes/flexbones/assets/sass/tools/_flexi-grid.scss
@@ -22,7 +22,7 @@
   margin-left: var(--gi-gutter);
   
   .gi{
-    display: flex;    
+    display: block;
     padding-left: calc(var(--gi-gutter) * -1);
     margin-bottom: calc(var(--gi-gutter) * -1);
      
