--- a/app/themes/flexbones/assets/sass/tools/_flexi-grid.scss
+++ b/app/themes/flexbones/assets/sass/tools/_flexi-grid.scss
@@ -25,7 +25,8 @@
     display: block;
     padding-left: calc(var(--gi-gutter) * -1);
     margin-bottom: calc(var(--gi-gutter) * -1);
-     
+    max-width: var(--calc-s);
+    word-wrap: break-word;
     
     --span-s: 1/1; //if not set default to full span
     --calc-s: calc(calc(var(--span-s))*100%); //the value entered will return a percentage when multiplied by 100%
@@ -38,7 +39,7 @@
     
     -ms-flex-preferred-size: var(--calc-s);
     flex-basis: var(--calc-s); //when small use the small percentage
-    
+    max-width: var(--calc-m);
     /*
       This is used if you do not have at-breakpoint included
     
@@ -59,6 +60,7 @@
    @include at-breakpoint($l){
       -ms-flex-preferred-size: var(--calc-l);
       flex-basis: var(--calc-l); //when large use the large percentage
+      max-width: var(--calc-l);
    }
     
     & > *{
